@@ -1,5 +1,11 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Temporarily add edge bend points/nodes. Add crappy layered algorithm.
+	This algorithm will be replaced later. Just versioning my experimental
+	crap here.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Add helpers for implementing a variety of graph traversal iterators.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
